--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年6月27日 6:5:41</h3>
+    <h3>更新时间：2023年6月28日 2:10:16</h3>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
-    <p><a href='http://seafile.jyx2048.com:2345/wine-building/wine-wow64-daily-debian10-amd64.7z'>（日更，不稳定）wine-wow64-daily-debian10-amd64</a></p>
-    <p><a href='http://seafile.jyx2048.com:2345/wine-building/wine-debian10-x86_64.7z'>（日更，不稳定）wine-debian10-x86_64</a></p>
-    <p><a href='http://seafile.jyx2048.com:2345/wine-building/wine-debian10-amd64.7z'>（日更，不稳定）wine-debian10-amd64</a></p>
-    <p><a href='http://seafile.jyx2048.com:2345/wine-building/wine-debian10-i386.7z'>（日更，不稳定）wine-debian10-i386</a></p>
+    <p><a href='http://120.25.153.144:2345/wine-building/wine-wow64-daily-debian10-amd64.7z'>（日更，不稳定）wine-wow64-daily-debian10-amd64</a></p>
+    <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>（日更，不稳定）wine-daily-debian10-x86_64</a></p>
+    <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-amd64.7z'>（日更，不稳定）wine-daily-debian10-amd64</a></p>
+    <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-i386.7z'>（日更，不稳定）wine-daily-debian10-i386</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/wine-building/wine-daily-ubuntu22.04-aarch64.7z'>（日更，不稳定）wine-daily-ubuntu22.04-aarch64</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-3/-/raw/main/spark-wine8-8.10.7z'>spark-wine8-8.10</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/spark-wine8-8.0.7z'>spark-wine8-8.0</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-stable-8.0.1.7z'>wine-stable-8.0.1</a></p>
