--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年8月6日 2:10:13</h3>
+    <h3>更新时间：2023年8月6日 12:14:28</h3>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>（日更，不稳定）wine-daily-debian10-x86_64</a></p>
@@ -172,6 +172,7 @@
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-7.2.7z'>wine-staging-7.2</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-7.0.7z'>wine-staging-7.0</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/deepin-wine6-stable.7z'>deepin-wine6-stable</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-lutris-ge-6.12-x86_64.7z'>wine-lutris-ge-6.12-x86_64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-lutris-ge-6.9-x86_64.7z'>wine-lutris-ge-6.9-x86_64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/lutris-6.4-i386.7z'>lutris-6.4-i386</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-stable-6.0.4.7z'>wine-stable-6.0.4</a></p>
