--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年8月21日 2:10:17</h3>
+    <h3>更新时间：2023年8月21日 22:30:57</h3>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>（日更，不稳定）wine-daily-debian10-x86_64</a></p>
@@ -30,9 +30,11 @@
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-stable-8.0.2-ubuntu22.04-aarch64.7z'>wine-stable-8.0.2-ubuntu22.04-aarch64</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-4/-/raw/main/wine-staging-8.14-debian10-x86_64.7z'>wine-staging-8.14-debian10-x86_64</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-4/-/raw/main/wine-staging-wow64-8.14-debian10-amd64.7z'>wine-staging-wow64-8.14-debian10-amd64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/lutris-GE-Proton8-14-x86_64.7z'>lutris-GE-Proton8-14-x86_64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.14-debian10-amd64.7z'>wine-staging-8.14-debian10-amd64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.14-debian10-i386.7z'>wine-staging-8.14-debian10-i386</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-lutris-GE-Proton8-13-x86_64.7z'>wine-lutris-GE-Proton8-13-x86_64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/GE-Proton8-13.7z'>GE-Proton8-13</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-4/-/raw/main/wine-staging-8.13-debian10-x86_64.7z'>wine-staging-8.13-debian10-x86_64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.13-debian10-amd64.7z'>wine-staging-8.13-debian10-amd64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.13-debian10-i386.7z'>wine-staging-8.13-debian10-i386</a></p>
@@ -46,6 +48,7 @@
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-3/-/raw/main/wine-staging-8.12-debian10-x86_64.7z'>wine-staging-8.12-debian10-x86_64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-lutris-ge-lol-p8-12-x86_64.7z'>wine-lutris-ge-lol-p8-12-x86_64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-lutris-GE-Proton8-12-x86_64.7z'>wine-lutris-GE-Proton8-12-x86_64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/GE-Proton8-12.7z'>GE-Proton8-12</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-3/-/raw/main/wine-staging-wow64-8.12-debian10-amd64.7z'>wine-staging-wow64-8.12-debian10-amd64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.12-debian10-amd64.7z'>wine-staging-8.12-debian10-amd64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.12-debian10-i386.7z'>wine-staging-8.12-debian10-i386</a></p>
