--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年8月24日 2:12:19</h3>
+    <h3>更新时间：2023年8月24日 22:31:3</h3>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>（日更，不稳定）wine-daily-debian10-x86_64</a></p>
@@ -33,6 +33,9 @@
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/lutris-GE-Proton8-14-x86_64.7z'>lutris-GE-Proton8-14-x86_64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.14-debian10-amd64.7z'>wine-staging-8.14-debian10-amd64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.14-debian10-i386.7z'>wine-staging-8.14-debian10-i386</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-ce-8.14-amd64.7z'>wine-ce-8.14-amd64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-ce-8.14-aarch64.7z'>wine-ce-8.14-aarch64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-ce-8.14-riscv64.7z'>wine-ce-8.14-riscv64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-lutris-GE-Proton8-13-x86_64.7z'>wine-lutris-GE-Proton8-13-x86_64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/GE-Proton8-13.7z'>GE-Proton8-13</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-4/-/raw/main/wine-staging-8.13-debian10-x86_64.7z'>wine-staging-8.13-debian10-x86_64</a></p>
