--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年10月21日 12:17:2</h3>
+    <h3>更新时间：2023年10月21日 22:30:36</h3>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>（日更，不稳定）wine-daily-debian10-x86_64</a></p>
@@ -21,6 +21,13 @@
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-amd64.7z'>（日更，不稳定）wine-daily-debian10-amd64</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-i386.7z'>（日更，不稳定）wine-daily-debian10-i386</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/wine-building/wine-daily-ubuntu22.04-aarch64.7z'>（日更，不稳定）wine-daily-ubuntu22.04-aarch64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-lutris-GE-Proton8.20-x86_64.7z'>wine-lutris-GE-Proton8.20-x86_64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-lutris-GE-Proton8.19-x86_64.7z'>wine-lutris-GE-Proton8.19-x86_64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-lutris-GE-Proton8.18-x86_64.7z'>wine-lutris-GE-Proton8.18-x86_64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/GE-Proton-8.20.7z'>GE-Proton-8.20</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/GE-Proton-8.19.7z'>GE-Proton-8.19</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/GE-Proton-8.18.7z'>GE-Proton-8.18</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/GE-Proton-8.17.7z'>GE-Proton-8.17</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-4/-/raw/main/spark-wine8-8.15.7z'>spark-wine8-8.15</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-5/-/raw/main/spark-wine8-wow64-8.15.7z'>spark-wine8-wow64-8.15</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-4/-/raw/main/wine-stable-8.0.2-debian10-x86_64.7z'>wine-stable-8.0.2-debian10-x86_64</a></p>
@@ -34,6 +41,7 @@
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-5/-/raw/main/wine-staging-wow64-8.18-debian10-amd64.7z'>wine-staging-wow64-8.18-debian10-amd64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.18-debian10-amd64.7z'>wine-staging-8.18-debian10-amd64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.18-debian10-i386.7z'>wine-staging-8.18-debian10-i386</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/GE-Proton-8.17.7z'>GE-Proton-8.17</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.17-debian10-amd64.7z'>wine-staging-8.17-debian10-amd64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.17-debian10-i386.7z'>wine-staging-8.17-debian10-i386</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.17-ubuntu22.04-aarch64.7z'>wine-staging-8.17-ubuntu22.04-aarch64</a></p>
